--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-build
-node_modules
+# dependencies
+/node_modules
+
+# production
+/build
+
+# misc
 .DS_Store
+
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
