--- a/package.json
+++ b/package.json
@@ -7,10 +7,14 @@
   "scripts": {
     "server": "json-server server/index.js --routes server/routes.json --middlewares server/handle-delay.js server/handle-ads.js --port 3001",
     "client": "react-scripts start",
+    "build": "react-scripts build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "",
+  "author": "biboswan",
+  "engines": {
+    "node": "10.15.0",
+    "yarn": ">=1.6.0"
+  },
   "dependencies": {
     "@material-ui/core": "^4.1.3",
     "cool-ascii-faces": "^1.3.4",
