--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   },
   "author": "biboswan",
   "engines": {
-    "node": "10.15.0",
+    "node": "10.15.3",
     "yarn": ">=1.6.0"
   },
   "dependencies": {
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "prettier": "1.18.2"
   }
 }
